--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Verdana, Geneva, Segoe UI', Tahoma, sans-serif;
+  font-family: "Verdana, Geneva, Segoe UI", Tahoma, sans-serif;
 }
 
 body {
@@ -11,8 +11,16 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.light {
   background-color: #f4f5fc;
   color: #24293e;
+}
+
+.dark {
+  background-color: #24293e;
+  color: #f4f5fc;
 }
 
 .header {
@@ -36,10 +44,11 @@ body {
 .image {
   max-height: 100%;
   max-width: 100%;
-  object-fit:contain;
+  object-fit: contain;
+  border-radius: 3px;
 }
 
-.progress-bar{
+.progress-bar {
   height: 4%;
   display: flex;
   align-items: center;
@@ -51,9 +60,17 @@ body {
   height: 6px;
   appearance: none;
   flex-grow: 1;
-  background:#24293e;
+  background: #24293e;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.dark .bar {
+  background: #bebbff;
+}
+
+.dark .bar:active {
+  background: white;
 }
 
 .bar::-webkit-slider-thumb {
@@ -63,11 +80,19 @@ body {
   height: 15px;
   border-radius: 50%;
   border: 2px solid white;
-  box-shadow: 0 1px 1px #bebbff;
+  /* box-shadow: 0 1px 1px #bebbff; */
 }
 
 .bar:active {
   background-color: #bebbff;
+}
+
+.bar::-webkit-slider-thumb:active {
+  box-shadow: 0 0 5px #2098f9;
+}
+
+.dark .bar::-webkit-slider-thumb:active {
+  box-shadow: 0 0 5px white;
 }
 
 .song-details {
@@ -79,7 +104,7 @@ body {
 
 .song-name {
   font-weight: 900;
-  font-size:x-large;
+  font-size: x-large;
 }
 
 .controls {
@@ -93,7 +118,11 @@ body {
 
 .icon {
   min-width: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  cursor: pointer;
 }
 
 .icon:active {
@@ -103,5 +132,62 @@ body {
 .active-icon {
   min-width: 24px;
   text-align: center;
-  color: #bebbff;
+  text-shadow: 0 0 5px #2098f9;
+}
+
+.bi-repeat-1 {
+  -webkit-text-stroke: 1px;
+  font-size: x-large;
+  text-shadow: 0 0 5px #2098f9, 0 0 10px #2098f9;
+}
+
+label {
+  width: 40px;
+  height: 20px;
+  position: relative;
+  display: block;
+  background: #ebebeb;
+  border-radius: 200px;
+  box-shadow: inset 0px 5px 15px rgba(0, 0, 0, 0.4),
+    inset 0px -5px 15px rgba(255, 255, 255, 0.4);
+  transition: 0.3s;
+}
+
+label::after {
+  content: "";
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  background: linear-gradient(180deg, #cbf5ee, #dceae8);
+  border-radius: 180px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+input#darkmode-toggle {
+  width: 0;
+  height: 0;
+  visibility: hidden;
+}
+
+input#darkmode-toggle + label {
+  background-color: #242424;
+}
+
+input#darkmode-toggle:checked + label::after {
+  left: 39px;
+  transform: translate(-100%);
+  background: linear-gradient(180deg, #777, #3a3a3a);
+}
+
+label:active::after {
+  width: 26px;
+}
+
+.divider {
+  height: 70%;
+  width: 1px;
+  border: 1px solid gray;
 }
